# notes

./: README.md
api/: .env.example  .gitignore  Cargo.toml  init.sql
api/migrations/: 20250315183656_init.sql  20250315191533_update_verification_length.sql  20250319144820_add_content_html.sql
api/src/: auth.rs  main.rs  models.rs  otp.rs  prompt.rs
api/src/routes/: docdetails.rs  docs.rs  me.rs  mod.rs  otp.rs  otpverify.rs  prompt.rs
web/: eslint.config.mjs  next.config.ts  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/(app)/: [id].tsx  layout.tsx  page.tsx
web/app/(app)/[id]/: page.tsx
web/components/: app-sidebar.tsx  dialog-login.tsx  editor-editor.tsx  sidebar-banner.tsx
web/components/ui/: dropdown-menu.tsx  select.tsx  sidebar.tsx  tabs.tsx  theme-provider.tsx
web/hooks/: use-user.tsx
web/lib/: constant.ts
