[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.1"
bcrypt = "0.17.0"
chrono = "0.4.40"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
lettre = "0.11.15"
lettre_email = "0.9.4"
pkg-config = "0.3.32"
rand = "0.9.0"
reqwest = { version = "0.12.14", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "uuid", "time" ] }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["cors"] }
uuid = "1.16.0"
